unpackaged/main/default/objects/Flow_dependent_picklist__mdt/Flow_dependent_picklist__mdt.object-meta.xml
<CustomObject>
    <label>Flow dependent picklist</label>
    <pluralLabel>Flow dependent picklists</pluralLabel>
</CustomObject>