unpackaged/main/default/objects/Flow_dependent_picklist__mdt/fields/Dependent_field_value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_field_value__c</fullName>
    <label>Dependent field value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>