unpackaged/main/default/objects/Flow_dependent_picklist__mdt/fields/Object_Name_for_Dependent_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Object_Name_for_Dependent_Picklist__c</fullName>
    <label>Object Name for Dependent Picklist</label>
    <length>250</length>
    <type>Text</type>
</CustomField>